--- a/reports/BytecodeReport-fannkuch.html
+++ b/reports/BytecodeReport-fannkuch.html
@@ -19,7 +19,7 @@
       </li>
     </ul>
     <h2 class='text-center'>Bytecode Analysis for script: fannkuch</h2>
-    <div class='row col-lg-4 col-lg-offset-4'>
+    <div class='row col-lg-5 col-lg-offset-4'>
       <pre>
         <code class='groovy'>/*
  * The Computer Language Benchmarks Game
@@ -112,7 +112,7 @@ def fannkuch(int n) {
 </code>
       </pre>
     </div>
-    <div class='row col-sm-8 text-center col-sm-offset-3'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <table class='table'>
         <tr>
           <th></th>
@@ -121,28 +121,16 @@ def fannkuch(int n) {
           <th>Static</th>
         </tr>
         <tr>
-          <td>Lines Before</td>
-          <td>818</td>
-          <td>519</td>
-          <td>23</td>
-        </tr>
-        <tr>
-          <td>Lines After</td>
-          <td>748</td>
-          <td>455</td>
-          <td>0</td>
-        </tr>
-        <tr>
           <td>Lines Removed</td>
           <td>70</td>
           <td>64</td>
-          <td>N/A</td>
+          <td>Error</td>
         </tr>
       </table>
     </div>
-    <div class='row col-sm-12 text-center'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <h2>Benchmarks</h2>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: 1</h3>
         <table class='table'>
           <tr>
@@ -152,20 +140,32 @@ def fannkuch(int n) {
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>422</td>
-            <td>481</td>
+            <td>Benchmark Average - Before</td>
+            <td>416</td>
+            <td>483</td>
             <td>N/A</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
-            <td>422</td>
-            <td>480</td>
+            <td>Benchmark Average - After</td>
+            <td>417</td>
+            <td>478</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>8.58</td>
+            <td>14.26</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>9.01</td>
+            <td>10.48</td>
             <td>N/A</td>
           </tr>
         </table>
       </div>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: 2</h3>
         <table class='table'>
           <tr>
@@ -175,20 +175,32 @@ def fannkuch(int n) {
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>419</td>
-            <td>508</td>
+            <td>Benchmark Average - Before</td>
+            <td>415</td>
+            <td>509</td>
             <td>N/A</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
-            <td>420</td>
-            <td>509</td>
+            <td>Benchmark Average - After</td>
+            <td>409</td>
+            <td>507</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>9.18</td>
+            <td>8.54</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>2.08</td>
+            <td>8.94</td>
             <td>N/A</td>
           </tr>
         </table>
       </div>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: 3</h3>
         <table class='table'>
           <tr>
@@ -198,15 +210,27 @@ def fannkuch(int n) {
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>424</td>
-            <td>515</td>
+            <td>Benchmark Average - Before</td>
+            <td>416</td>
+            <td>512</td>
             <td>N/A</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
-            <td>425</td>
-            <td>511</td>
+            <td>Benchmark Average - After</td>
+            <td>421</td>
+            <td>504</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>5.42</td>
+            <td>11.16</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>5.29</td>
+            <td>2.32</td>
             <td>N/A</td>
           </tr>
         </table>
