--- a/reports/BytecodeReport-recursive.html
+++ b/reports/BytecodeReport-recursive.html
@@ -19,7 +19,7 @@
       </li>
     </ul>
     <h2 class='text-center'>Bytecode Analysis for script: recursive</h2>
-    <div class='row col-lg-4 col-lg-offset-4'>
+    <div class='row col-lg-5 col-lg-offset-4'>
       <pre>
         <code class='groovy'>/*
  * The Computer Language Benchmarks Game
@@ -66,7 +66,7 @@ printf("Tak(3.0,2.0,1.0): %.1f\n", tak(3.0D, 2.0D, 1.0D))
 </code>
       </pre>
     </div>
-    <div class='row col-sm-8 text-center col-sm-offset-3'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <table class='table'>
         <tr>
           <th></th>
@@ -75,28 +75,16 @@ printf("Tak(3.0,2.0,1.0): %.1f\n", tak(3.0D, 2.0D, 1.0D))
           <th>Static</th>
         </tr>
         <tr>
-          <td>Lines Before</td>
-          <td>717</td>
-          <td>298</td>
-          <td>93</td>
-        </tr>
-        <tr>
-          <td>Lines After</td>
-          <td>715</td>
-          <td>296</td>
-          <td>0</td>
-        </tr>
-        <tr>
           <td>Lines Removed</td>
           <td>2</td>
           <td>2</td>
-          <td>N/A</td>
+          <td>Error</td>
         </tr>
       </table>
     </div>
-    <div class='row col-sm-12 text-center'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <h2>Benchmarks</h2>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: 1</h3>
         <table class='table'>
           <tr>
@@ -106,15 +94,27 @@ printf("Tak(3.0,2.0,1.0): %.1f\n", tak(3.0D, 2.0D, 1.0D))
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>453</td>
-            <td>593</td>
+            <td>Benchmark Average - Before</td>
+            <td>445</td>
+            <td>589</td>
             <td>N/A</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
-            <td>450</td>
-            <td>592</td>
+            <td>Benchmark Average - After</td>
+            <td>446</td>
+            <td>588</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>6.4</td>
+            <td>11.07</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>5.76</td>
+            <td>6.18</td>
             <td>N/A</td>
           </tr>
         </table>
