--- a/reports/BytecodeReport-spectralnorm.html
+++ b/reports/BytecodeReport-spectralnorm.html
@@ -19,7 +19,7 @@
       </li>
     </ul>
     <h2 class='text-center'>Bytecode Analysis for script: spectralnorm</h2>
-    <div class='row col-lg-4 col-lg-offset-4'>
+    <div class='row col-lg-5 col-lg-offset-4'>
       <pre>
         <code class='groovy'>/*
  * The Computer Language Shootout
@@ -88,7 +88,7 @@ println(nf.format(approximate(n)))
 </code>
       </pre>
     </div>
-    <div class='row col-sm-8 text-center col-sm-offset-3'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <table class='table'>
         <tr>
           <th></th>
@@ -97,28 +97,16 @@ println(nf.format(approximate(n)))
           <th>Static</th>
         </tr>
         <tr>
-          <td>Lines Before</td>
-          <td>638</td>
-          <td>419</td>
-          <td>153</td>
-        </tr>
-        <tr>
-          <td>Lines After</td>
-          <td>624</td>
-          <td>405</td>
-          <td>0</td>
-        </tr>
-        <tr>
           <td>Lines Removed</td>
           <td>14</td>
           <td>14</td>
-          <td>N/A</td>
+          <td>Error</td>
         </tr>
       </table>
     </div>
-    <div class='row col-sm-12 text-center'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <h2>Benchmarks</h2>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: 1</h3>
         <table class='table'>
           <tr>
@@ -128,15 +116,27 @@ println(nf.format(approximate(n)))
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>467</td>
-            <td>541</td>
+            <td>Benchmark Average - Before</td>
+            <td>469</td>
+            <td>537</td>
             <td>N/A</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
-            <td>468</td>
-            <td>542</td>
+            <td>Benchmark Average - After</td>
+            <td>464</td>
+            <td>540</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>4.51</td>
+            <td>4.38</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>4.79</td>
+            <td>4.28</td>
             <td>N/A</td>
           </tr>
         </table>
