--- a/reports/BytecodeReport-ForLoop.html
+++ b/reports/BytecodeReport-ForLoop.html
@@ -19,7 +19,7 @@
       </li>
     </ul>
     <h2 class='text-center'>Bytecode Analysis for script: forloop</h2>
-    <div class='row col-lg-4 col-lg-offset-4'>
+    <div class='row col-lg-5 col-lg-offset-4'>
       <pre>
         <code class='groovy'>List numbers = [1,2,3]
 List results = []
@@ -30,25 +30,13 @@ results
 </code>
       </pre>
     </div>
-    <div class='row col-sm-8 text-center col-sm-offset-3'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <table class='table'>
         <tr>
           <th></th>
           <th>Groovyc</th>
           <th>Indy</th>
           <th>Static</th>
-        </tr>
-        <tr>
-          <td>Lines Before</td>
-          <td>125</td>
-          <td>102</td>
-          <td>104</td>
-        </tr>
-        <tr>
-          <td>Lines After</td>
-          <td>121</td>
-          <td>98</td>
-          <td>100</td>
         </tr>
         <tr>
           <td>Lines Removed</td>
@@ -58,9 +46,9 @@ results
         </tr>
       </table>
     </div>
-    <div class='row col-sm-12 text-center'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <h2>Benchmarks</h2>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: 1000</h3>
         <table class='table'>
           <tr>
@@ -70,20 +58,32 @@ results
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>409</td>
-            <td>443</td>
-            <td>332</td>
+            <td>Benchmark Average - Before</td>
+            <td>405</td>
+            <td>436</td>
+            <td>329</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
-            <td>409</td>
-            <td>437</td>
-            <td>333</td>
+            <td>Benchmark Average - After</td>
+            <td>407</td>
+            <td>436</td>
+            <td>329</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>4.04</td>
+            <td>6.55</td>
+            <td>2.53</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>3.89</td>
+            <td>7.21</td>
+            <td>5.26</td>
           </tr>
         </table>
       </div>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: 100000</h3>
         <table class='table'>
           <tr>
@@ -93,20 +93,32 @@ results
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>411</td>
+            <td>Benchmark Average - Before</td>
+            <td>409</td>
             <td>440</td>
-            <td>333</td>
+            <td>330</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
-            <td>408</td>
-            <td>441</td>
+            <td>Benchmark Average - After</td>
+            <td>405</td>
+            <td>435</td>
             <td>332</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>4.74</td>
+            <td>5.64</td>
+            <td>3.89</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>2.39</td>
+            <td>6.23</td>
+            <td>5.35</td>
           </tr>
         </table>
       </div>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: 1000000</h3>
         <table class='table'>
           <tr>
@@ -116,20 +128,32 @@ results
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>407</td>
-            <td>441</td>
+            <td>Benchmark Average - Before</td>
+            <td>405</td>
+            <td>437</td>
             <td>331</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
-            <td>410</td>
-            <td>439</td>
-            <td>333</td>
+            <td>Benchmark Average - After</td>
+            <td>407</td>
+            <td>438</td>
+            <td>331</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>3.63</td>
+            <td>4.86</td>
+            <td>4.56</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>4.49</td>
+            <td>4.5</td>
+            <td>3.35</td>
           </tr>
         </table>
       </div>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: 100000000</h3>
         <table class='table'>
           <tr>
@@ -139,16 +163,63 @@ results
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>408</td>
+            <td>Benchmark Average - Before</td>
+            <td>404</td>
             <td>438</td>
+            <td>327</td>
+          </tr>
+          <tr>
+            <td>Benchmark Average - After</td>
+            <td>409</td>
+            <td>438</td>
+            <td>329</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>2.58</td>
+            <td>4.93</td>
+            <td>2.7</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>5.88</td>
+            <td>2.94</td>
+            <td>2.65</td>
+          </tr>
+        </table>
+      </div>
+      <div class='col-sm-6 text-center'>
+        <h3>For parameter: 100000000000</h3>
+        <table class='table'>
+          <tr>
+            <th></th>
+            <th>Groovyc</th>
+            <th>Indy</th>
+            <th>Static</th>
+          </tr>
+          <tr>
+            <td>Benchmark Average - Before</td>
+            <td>409</td>
+            <td>436</td>
             <td>330</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
-            <td>410</td>
-            <td>437</td>
-            <td>330</td>
+            <td>Benchmark Average - After</td>
+            <td>405</td>
+            <td>440</td>
+            <td>333</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>5.06</td>
+            <td>7.57</td>
+            <td>4.11</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>3.29</td>
+            <td>3.42</td>
+            <td>6.28</td>
           </tr>
         </table>
       </div>
