--- a/reports/BytecodeReport-HelloWorld.html
+++ b/reports/BytecodeReport-HelloWorld.html
@@ -19,13 +19,13 @@
       </li>
     </ul>
     <h2 class='text-center'>Bytecode Analysis for script: HelloWorld</h2>
-    <div class='row col-lg-4 col-lg-offset-4'>
+    <div class='row col-lg-5 col-lg-offset-4'>
       <pre>
         <code class='groovy'>println 'Hello, World!'
 </code>
       </pre>
     </div>
-    <div class='row col-sm-8 text-center col-sm-offset-3'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <table class='table'>
         <tr>
           <th></th>
@@ -34,28 +34,16 @@
           <th>Static</th>
         </tr>
         <tr>
-          <td>Lines Before</td>
-          <td>72</td>
-          <td>58</td>
-          <td>59</td>
-        </tr>
-        <tr>
-          <td>Lines After</td>
-          <td>72</td>
-          <td>58</td>
-          <td>59</td>
-        </tr>
-        <tr>
           <td>Lines Removed</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
+          <td>Error</td>
+          <td>Error</td>
+          <td>Error</td>
         </tr>
       </table>
     </div>
-    <div class='row col-sm-12 text-center'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <h2>Benchmarks</h2>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: null</h3>
         <table class='table'>
           <tr>
@@ -65,16 +53,28 @@
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>392</td>
-            <td>419</td>
+            <td>Benchmark Average - Before</td>
+            <td>390</td>
+            <td>420</td>
             <td>330</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
+            <td>Benchmark Average - After</td>
             <td>393</td>
-            <td>422</td>
-            <td>332</td>
+            <td>418</td>
+            <td>329</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>3.95</td>
+            <td>6.63</td>
+            <td>3.33</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>3.58</td>
+            <td>3.39</td>
+            <td>2.21</td>
           </tr>
         </table>
       </div>
