--- a/reports/BytecodeReport-TestExample.html
+++ b/reports/BytecodeReport-TestExample.html
@@ -19,7 +19,7 @@
       </li>
     </ul>
     <h2 class='text-center'>Bytecode Analysis for script: TestExample</h2>
-    <div class='row col-lg-4 col-lg-offset-4'>
+    <div class='row col-lg-5 col-lg-offset-4'>
       <pre>
         <code class='groovy'>class TestExample {
     public static void main(String[] args) {
@@ -29,25 +29,13 @@
 </code>
       </pre>
     </div>
-    <div class='row col-sm-8 text-center col-sm-offset-3'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <table class='table'>
         <tr>
           <th></th>
           <th>Groovyc</th>
           <th>Indy</th>
           <th>Static</th>
-        </tr>
-        <tr>
-          <td>Lines Before</td>
-          <td>104</td>
-          <td>100</td>
-          <td>100</td>
-        </tr>
-        <tr>
-          <td>Lines After</td>
-          <td>102</td>
-          <td>98</td>
-          <td>98</td>
         </tr>
         <tr>
           <td>Lines Removed</td>
@@ -57,9 +45,9 @@
         </tr>
       </table>
     </div>
-    <div class='row col-sm-12 text-center'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <h2>Benchmarks</h2>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: null</h3>
         <table class='table'>
           <tr>
@@ -69,16 +57,28 @@
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
+            <td>Benchmark Average - Before</td>
             <td>109</td>
             <td>107</td>
             <td>107</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
+            <td>Benchmark Average - After</td>
+            <td>108</td>
             <td>107</td>
-            <td>106</td>
             <td>107</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>1.11</td>
+            <td>2.08</td>
+            <td>1.88</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>2.0</td>
+            <td>1.06</td>
+            <td>1.56</td>
           </tr>
         </table>
       </div>
