--- a/reports/BytecodeReport-TestExampleIfElse.html
+++ b/reports/BytecodeReport-TestExampleIfElse.html
@@ -19,7 +19,7 @@
       </li>
     </ul>
     <h2 class='text-center'>Bytecode Analysis for script: TestExampleIfElse</h2>
-    <div class='row col-lg-4 col-lg-offset-4'>
+    <div class='row col-lg-5 col-lg-offset-4'>
       <pre>
         <code class='groovy'>class TestExampleIfElse {
     public static void main(String[] args) {
@@ -38,25 +38,13 @@
 </code>
       </pre>
     </div>
-    <div class='row col-sm-8 text-center col-sm-offset-3'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <table class='table'>
         <tr>
           <th></th>
           <th>Groovyc</th>
           <th>Indy</th>
           <th>Static</th>
-        </tr>
-        <tr>
-          <td>Lines Before</td>
-          <td>157</td>
-          <td>132</td>
-          <td>136</td>
-        </tr>
-        <tr>
-          <td>Lines After</td>
-          <td>155</td>
-          <td>130</td>
-          <td>130</td>
         </tr>
         <tr>
           <td>Lines Removed</td>
@@ -66,9 +54,9 @@
         </tr>
       </table>
     </div>
-    <div class='row col-sm-12 text-center'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <h2>Benchmarks</h2>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: null</h3>
         <table class='table'>
           <tr>
@@ -78,16 +66,28 @@
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>402</td>
-            <td>446</td>
+            <td>Benchmark Average - Before</td>
+            <td>401</td>
+            <td>440</td>
+            <td>309</td>
+          </tr>
+          <tr>
+            <td>Benchmark Average - After</td>
+            <td>407</td>
+            <td>443</td>
             <td>310</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
-            <td>400</td>
-            <td>447</td>
-            <td>318</td>
+            <td>Benchmark Std Dev - Before</td>
+            <td>8.81</td>
+            <td>5.01</td>
+            <td>2.64</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>4.49</td>
+            <td>4.15</td>
+            <td>5.15</td>
           </tr>
         </table>
       </div>
