--- a/reports/BytecodeReport-TestExampleMultiAssignment.html
+++ b/reports/BytecodeReport-TestExampleMultiAssignment.html
@@ -19,7 +19,7 @@
       </li>
     </ul>
     <h2 class='text-center'>Bytecode Analysis for script: TestExampleMultiAssignment</h2>
-    <div class='row col-lg-4 col-lg-offset-4'>
+    <div class='row col-lg-5 col-lg-offset-4'>
       <pre>
         <code class='groovy'>class TestExampleMultiAssignment {
     public static void main(String[] args) {
@@ -30,25 +30,13 @@
 </code>
       </pre>
     </div>
-    <div class='row col-sm-8 text-center col-sm-offset-3'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <table class='table'>
         <tr>
           <th></th>
           <th>Groovyc</th>
           <th>Indy</th>
           <th>Static</th>
-        </tr>
-        <tr>
-          <td>Lines Before</td>
-          <td>120</td>
-          <td>116</td>
-          <td>116</td>
-        </tr>
-        <tr>
-          <td>Lines After</td>
-          <td>112</td>
-          <td>108</td>
-          <td>108</td>
         </tr>
         <tr>
           <td>Lines Removed</td>
@@ -58,9 +46,9 @@
         </tr>
       </table>
     </div>
-    <div class='row col-sm-12 text-center'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <h2>Benchmarks</h2>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: null</h3>
         <table class='table'>
           <tr>
@@ -70,16 +58,28 @@
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>113</td>
-            <td>109</td>
-            <td>106</td>
+            <td>Benchmark Average - Before</td>
+            <td>107</td>
+            <td>107</td>
+            <td>107</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
-            <td>107</td>
-            <td>107</td>
+            <td>Benchmark Average - After</td>
+            <td>108</td>
             <td>106</td>
+            <td>105</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>1.18</td>
+            <td>1.89</td>
+            <td>1.35</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>1.7</td>
+            <td>1.75</td>
+            <td>1.03</td>
           </tr>
         </table>
       </div>
