--- a/reports/BytecodeReport-fibo.html
+++ b/reports/BytecodeReport-fibo.html
@@ -19,7 +19,7 @@
       </li>
     </ul>
     <h2 class='text-center'>Bytecode Analysis for script: fibo</h2>
-    <div class='row col-lg-4 col-lg-offset-4'>
+    <div class='row col-lg-5 col-lg-offset-4'>
       <pre>
         <code class='groovy'>// $Id: scripts.fibo.java,v 1.3 2005-04-25 19:01:38 igouy-guest Exp $
 // http://www.bagley.org/~doug/shootout/
@@ -35,7 +35,7 @@ int fib(int n) {
 </code>
       </pre>
     </div>
-    <div class='row col-sm-8 text-center col-sm-offset-3'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <table class='table'>
         <tr>
           <th></th>
@@ -44,51 +44,16 @@ int fib(int n) {
           <th>Static</th>
         </tr>
         <tr>
-          <td>Lines Before</td>
-          <td>209</td>
-          <td>99</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <td>Lines After</td>
-          <td>205</td>
-          <td>97</td>
-          <td>0</td>
-        </tr>
-        <tr>
           <td>Lines Removed</td>
           <td>4</td>
           <td>2</td>
-          <td>N/A</td>
+          <td>Error</td>
         </tr>
       </table>
     </div>
-    <div class='row col-sm-12 text-center'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <h2>Benchmarks</h2>
-      <div class='col-sm-4 text-center'>
-        <h3>For parameter: 5</h3>
-        <table class='table'>
-          <tr>
-            <th></th>
-            <th>Groovyc</th>
-            <th>Indy</th>
-            <th>Static</th>
-          </tr>
-          <tr>
-            <td>Benchmark - Before</td>
-            <td>408</td>
-            <td>461</td>
-            <td>N/A</td>
-          </tr>
-          <tr>
-            <td>Benchmark - After</td>
-            <td>411</td>
-            <td>457</td>
-            <td>N/A</td>
-          </tr>
-        </table>
-      </div>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: 10</h3>
         <table class='table'>
           <tr>
@@ -98,21 +63,33 @@ int fib(int n) {
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>409</td>
-            <td>460</td>
+            <td>Benchmark Average - Before</td>
+            <td>406</td>
+            <td>454</td>
             <td>N/A</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
-            <td>407</td>
-            <td>459</td>
+            <td>Benchmark Average - After</td>
+            <td>408</td>
+            <td>456</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>5.13</td>
+            <td>3.47</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>5.63</td>
+            <td>3.9</td>
             <td>N/A</td>
           </tr>
         </table>
       </div>
-      <div class='col-sm-4 text-center'>
-        <h3>For parameter: 20</h3>
+      <div class='col-sm-6 text-center'>
+        <h3>For parameter: 25</h3>
         <table class='table'>
           <tr>
             <th></th>
@@ -121,15 +98,62 @@ int fib(int n) {
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>413</td>
-            <td>479</td>
+            <td>Benchmark Average - Before</td>
+            <td>416</td>
+            <td>500</td>
             <td>N/A</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
+            <td>Benchmark Average - After</td>
             <td>413</td>
-            <td>480</td>
+            <td>506</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>4.3</td>
+            <td>6.37</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>5.59</td>
+            <td>8.78</td>
+            <td>N/A</td>
+          </tr>
+        </table>
+      </div>
+      <div class='col-sm-6 text-center'>
+        <h3>For parameter: 50</h3>
+        <table class='table'>
+          <tr>
+            <th></th>
+            <th>Groovyc</th>
+            <th>Indy</th>
+            <th>Static</th>
+          </tr>
+          <tr>
+            <td>Benchmark Average - Before</td>
+            <td>6020</td>
+            <td>6024</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Average - After</td>
+            <td>6018</td>
+            <td>6023</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>1.72</td>
+            <td>2.31</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>2.16</td>
+            <td>2.87</td>
             <td>N/A</td>
           </tr>
         </table>
