--- a/reports/BytecodeReport-mandelbrot.html
+++ b/reports/BytecodeReport-mandelbrot.html
@@ -19,7 +19,7 @@
       </li>
     </ul>
     <h2 class='text-center'>Bytecode Analysis for script: mandelbrot</h2>
-    <div class='row col-lg-4 col-lg-offset-4'>
+    <div class='row col-lg-5 col-lg-offset-4'>
       <pre>
         <code class='groovy'>/*
  * The Computer Language Shootout
@@ -69,7 +69,7 @@ System.out.write(pbm_data, 0, pos)
 </code>
       </pre>
     </div>
-    <div class='row col-sm-8 text-center col-sm-offset-3'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <table class='table'>
         <tr>
           <th></th>
@@ -78,28 +78,16 @@ System.out.write(pbm_data, 0, pos)
           <th>Static</th>
         </tr>
         <tr>
-          <td>Lines Before</td>
-          <td>689</td>
-          <td>455</td>
-          <td>28</td>
-        </tr>
-        <tr>
-          <td>Lines After</td>
-          <td>645</td>
-          <td>413</td>
-          <td>0</td>
-        </tr>
-        <tr>
           <td>Lines Removed</td>
           <td>44</td>
           <td>42</td>
-          <td>N/A</td>
+          <td>Error</td>
         </tr>
       </table>
     </div>
-    <div class='row col-sm-12 text-center'>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
       <h2>Benchmarks</h2>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: 1</h3>
         <table class='table'>
           <tr>
@@ -109,20 +97,32 @@ System.out.write(pbm_data, 0, pos)
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>420</td>
-            <td>481</td>
+            <td>Benchmark Average - Before</td>
+            <td>416</td>
+            <td>488</td>
             <td>N/A</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
-            <td>420</td>
-            <td>481</td>
+            <td>Benchmark Average - After</td>
+            <td>419</td>
+            <td>478</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>3.68</td>
+            <td>13.53</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>5.49</td>
+            <td>8.68</td>
             <td>N/A</td>
           </tr>
         </table>
       </div>
-      <div class='col-sm-4 text-center'>
+      <div class='col-sm-6 text-center'>
         <h3>For parameter: 10</h3>
         <table class='table'>
           <tr>
@@ -132,15 +132,27 @@ System.out.write(pbm_data, 0, pos)
             <th>Static</th>
           </tr>
           <tr>
-            <td>Benchmark - Before</td>
-            <td>445</td>
-            <td>550</td>
+            <td>Benchmark Average - Before</td>
+            <td>437</td>
+            <td>546</td>
             <td>N/A</td>
           </tr>
           <tr>
-            <td>Benchmark - After</td>
-            <td>443</td>
-            <td>554</td>
+            <td>Benchmark Average - After</td>
+            <td>440</td>
+            <td>548</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - Before</td>
+            <td>2.75</td>
+            <td>4.12</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark Std Dev - After</td>
+            <td>8.58</td>
+            <td>3.03</td>
             <td>N/A</td>
           </tr>
         </table>
