--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
           </tr>
           <tr>
             <td>
+              <a href='reports/BytecodeReport-App.html'>App</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <a href='reports/BytecodeReport-ary.html'>ary</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-binarytrees.html'>binarytrees</a>
             </td>
           </tr>
           <tr>
@@ -75,6 +85,11 @@
           </tr>
           <tr>
             <td>
+              <a href='reports/BytecodeReport-regexdna.html'>regexdna</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <a href='reports/BytecodeReport-spectralnorm.html'>spectralnorm</a>
             </td>
           </tr>
@@ -96,6 +111,11 @@
           <tr>
             <td>
               <a href='reports/BytecodeReport-threadring.html'>threadring</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-wordfreq.html'>wordfreq</a>
             </td>
           </tr>
         </table>
