--- a/reports/BytecodeReport-App.html
+++ b/reports/BytecodeReport-App.html
@@ -20,7 +20,7 @@
     </ul>
     <h2 class='text-center'>Bytecode Analysis for com.strater.jenn.App: App</h2>
     <div class='row col-sm-10 text-center col-sm-offset-1'>
-      <h2>Lines Removed: 468</h2>
+      <h2>Lines Removed: 484</h2>
     </div>
     <div class='row col-sm-10 text-center col-sm-offset-1'>
       <h2>Benchmarks</h2>
@@ -32,20 +32,14 @@
             <th>After Optimization</th>
           </tr>
           <tr>
-            <td>Benchmark Average - Before</td>
-            <td>Error</td>
+            <td>Benchmark Average</td>
+            <td>6265</td>
+            <td>6278</td>
           </tr>
           <tr>
-            <td>Benchmark Average - After</td>
-            <td>Error</td>
-          </tr>
-          <tr>
-            <td>Benchmark Std Dev - Before</td>
-            <td>Error</td>
-          </tr>
-          <tr>
-            <td>Benchmark Std Dev - After</td>
-            <td>Error</td>
+            <td>Benchmark Std Dev</td>
+            <td>59.04</td>
+            <td>66.3</td>
           </tr>
         </table>
       </div>
